# edep-simphony-plugin

./: .gitignore  CMakeLists.txt  PLAN_a2_thin_scint.md  README.md  run_meta.txt  setup_env.example.sh  setup_env.sh
macro/: opticks_plugin.mac  run_3gev_electron.mac  simphony_plugin.mac
src/: LArTPCSensorIdentifier.h  OpticsEventAction.cc  OpticsEventAction.hh  OpticsPhysicsSwap.cc  OpticsPhysicsSwap.hh  OpticsRunAction.cc  OpticsRunAction.hh  OpticsStepAction.cc  OpticsStepAction.hh  SimphonyCpuPhotonTracker.cc  SimphonyCpuPhotonTracker.hh  SimphonyEventAction.cc  SimphonyEventAction.hh  SimphonyPhysicsSwap.cc  SimphonyPhysicsSwap.hh  SimphonyRunAction.cc  SimphonyRunAction.hh  SimphonyScintProcess.cc  SimphonyScintProcess.hh  SimphonyStepAction.cc  SimphonyStepAction.hh  plugin_entry.cc
